--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@ button a:hover {
         e.preventDefault();
         window.scrollTo({ top: 0, behavior: 'smooth' });
     });
+    var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?41c4c88ce25528f5311e1bb0c18eb107";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
 </script>
 </body>
 
